# otclient

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeSettings.json  PERFORMANCE_OPTIMIZATIONS.md  README.md  init.lua  pre-build.sh  setup_cef.ps1  setup_cef.sh  test_cef_structure.cpp  test_simple.lua  vcpkg-configuration.json  vcpkg.json
data/locales/: pt.lua
modules/client/: client.lua  client.otmod
modules/client_entergame/: entergame.lua
modules/client_http_entergame/: http_entergame.lua  http_entergame.otmod  http_entergame.otui
modules/client_locales/: locales.lua
modules/client_options/: options.lua
modules/client_webview/: client_webview.lua  client_webview.otmod  example_usage.lua  example_webview.otui
modules/client_webviewdemo/: browser.otui  demo.otui  webviewdemo.lua  webviewdemo.otmod  webviewdemo.otui
modules/client_webviewdemo/demo/: demo.css  demo.html  demo.js
modules/corelib/: inputmessage.lua
modules/corelib/ui/: uicefwebview.lua  webview_translation_callbacks.lua  webview_translations.lua
modules/corelib/ui/webviews/: index.template.html
modules/gamelib/: gamelib.otmod  json.lua
src/: app.manifest  app_minimal.manifest  cef_helper.cpp  main.cpp
src/cef/: CMakeLists.txt
src/cef/core/: cef_app.cpp  cef_app.h  cef_config.cpp  cef_config.h  cef_conflinux.cpp  cef_conflinux.h  cef_confwin.cpp  cef_confwin.h  cef_helper.cpp  cef_helper.h  cef_init.cpp  cef_init.h
src/cef/graphics/: cef_renderer.cpp  cef_renderer.h  cef_renderer_cpu.cpp  cef_renderer_cpu.h  cef_renderer_factory.cpp  cef_renderercpu.cpp  cef_renderercpu.h  cef_rendererfactory.cpp  cef_rendererfactory.h
src/cef/graphics/gpu/: cef_renderer_gpu_linux.cpp  cef_renderer_gpu_linux.h  cef_renderer_gpu_linux_mesa.cpp  cef_renderer_gpu_linux_mesa.h  cef_renderer_gpu_linux_nonmesa.cpp  cef_renderer_gpu_linux_nonmesa.h  cef_renderer_gpu_win.cpp  cef_renderer_gpu_win.h  cef_renderergpulinuxmesa.cpp  cef_renderergpulinuxmesa.h  cef_renderergpulinuxnonmesa.cpp  cef_renderergpulinuxnonmesa.h  cef_renderergpuwin.cpp  cef_renderergpuwin.h  gpu_helper.cpp  gpu_helper.h  gpuhelper.cpp  linux_gpu_context.cpp  linuxgpucontext.cpp  linuxgpucontext.h  windows_gpu_context.cpp  windowsgpucontext.cpp  windowsgpucontext.h
src/cef/resources/: cefphysfsresourcehandler.cpp
src/cef/subprocess/: main.cpp
src/cef/ui/: cef_client.cpp  cef_client.h  cef_inputhandler.cpp  cef_inputhandler.h  cef_luahandler.cpp  cef_luahandler.h  uicefwebview.cpp  uicefwebview.h
src/cef_subprocess/: main.cpp
src/client/: protocolgame.cpp  protocolgameparse.cpp
src/framework/: CMakeLists.txt  luafunctions.cpp
src/framework/cmake/: FindEGL.cmake  FindGLEW.cmake  FindOgg.cmake  FindOpenAL.cmake  FindOpenGLES2.cmake  FindOpenSSL.cmake  FindPhysFS.cmake  FindVorbis.cmake  FindVorbisFile.cmake  FindZLIB.cmake
src/framework/core/: application.cpp  eventdispatcher.cpp  eventdispatcher.h  graphicalapplication.cpp  resourcemanager.cpp
src/framework/graphics/: glutil.h  graphics.cpp  graphics.h  texture.cpp  texture.h
src/framework/net/: connection.cpp  inputmessage.cpp  inputmessage.h
src/framework/platform/: win32crashhandler.cpp  win32platform.cpp
src/framework/sound/: soundchannel.cpp
src/framework/stdext/: demangle.cpp  string.cpp
src/framework/ui/: async_gpu_pipeline.h  cefphysfsresourcehandler.cpp  cefphysfsresourcehandler.h  declarations.h  gpu_texture_pool.h  optimized_cef_webview.h  ui.h  uicefwebview.cpp  uicefwebview.h  uiwebview.cpp  uiwebview.h
src/framework/util/: crypt.cpp
webviews/demo/: demo.html  demo.js
webviews/entergame/: entergame.css  entergame.html  entergame.js
webviews/shared/: otclient.css  otclient.js  translations.js
